[gd_scene load_steps=7 format=2]

[ext_resource path="res://src/main_menu.gd" type="Script" id=1]
[ext_resource path="res://tilemaps/RetailRumble_Title.png" type="Texture" id=2]
[ext_resource path="res://objects/generic_button.tscn" type="PackedScene" id=3]

[sub_resource type="Animation" id=1]
resource_name = "Fade"
tracks/0/type = "value"
tracks/0/path = NodePath(".:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5, 1 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Color( 0, 0, 0, 0 ), Color( 0, 0, 0, 1 ), Color( 0, 0, 0, 0 ) ]
}

[sub_resource type="Animation" id=2]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath(".:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 0, 0, 0, 0 ) ]
}

[sub_resource type="StyleBoxFlat" id=3]
border_width_left = 10
border_width_top = 10
border_width_right = 10
border_width_bottom = 10
border_blend = true
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10

[node name="StartMenu" type="Node2D"]
position = Vector2( 0, 600 )
script = ExtResource( 1 )

[node name="Container" type="Control" parent="."]
anchor_top = 1.0
anchor_bottom = 1.0
margin_top = -590.0
margin_right = 1014.0
mouse_filter = 1

[node name="ScreenTransition" type="ColorRect" parent="Container"]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 1
color = Color( 0, 0, 0, 0 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="Container/ScreenTransition"]
anims/Fade = SubResource( 1 )
anims/RESET = SubResource( 2 )

[node name="MarginContainer" type="MarginContainer" parent="Container"]
anchor_top = 1.0
anchor_bottom = 1.0
margin_left = 100.0
margin_top = -180.0
margin_right = 312.0
margin_bottom = 100.0
mouse_filter = 1

[node name="VBoxContainer" type="GridContainer" parent="Container/MarginContainer"]
margin_right = 230.0
margin_bottom = 280.0
mouse_filter = 0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/vseparation = 50
custom_constants/hseparation = 150
columns = 2

[node name="Start" parent="Container/MarginContainer/VBoxContainer" instance=ExtResource( 3 )]
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 0.0
margin_top = 0.0
margin_right = 40.0
margin_bottom = 40.0

[node name="Controls" parent="Container/MarginContainer/VBoxContainer" instance=ExtResource( 3 )]
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 190.0
margin_top = 0.0
margin_right = 230.0
margin_bottom = 40.0

[node name="Credits" parent="Container/MarginContainer/VBoxContainer" instance=ExtResource( 3 )]
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 0.0
margin_top = 90.0
margin_right = 40.0
margin_bottom = 130.0

[node name="Close" parent="Container/MarginContainer/VBoxContainer" instance=ExtResource( 3 )]
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 190.0
margin_top = 90.0
margin_right = 230.0
margin_bottom = 130.0

[node name="Popup" type="Popup" parent="Container"]
visible = true
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -391.0
margin_top = -183.0
margin_right = 391.0
margin_bottom = 183.0
rect_clip_content = true
mouse_filter = 1
popup_exclusive = true

[node name="PanelContainer" type="PanelContainer" parent="Container/Popup"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_styles/panel = SubResource( 3 )

[node name="VBoxContainer" type="VBoxContainer" parent="Container/Popup/PanelContainer"]
margin_left = 10.0
margin_top = 10.0
margin_right = 772.0
margin_bottom = 356.0

[node name="Title" type="Label" parent="Container/Popup/PanelContainer/VBoxContainer"]
margin_right = 762.0
margin_bottom = 14.0

[node name="RichTextLabel" type="RichTextLabel" parent="Container/Popup/PanelContainer/VBoxContainer"]
margin_top = 18.0
margin_right = 762.0
margin_bottom = 33.0
fit_content_height = true
scroll_following = true

[node name="MarginContainer" type="MarginContainer" parent="Container/Popup"]
anchor_top = 1.0
anchor_bottom = 1.0
margin_left = 10.0
margin_top = -40.0
margin_right = 76.0
margin_bottom = -10.0

[node name="Close" type="Button" parent="Container/Popup/MarginContainer"]
margin_right = 66.0
margin_bottom = 30.0
text = "Close"

[node name="RetailRumbleTitle" type="Sprite" parent="Container"]
position = Vector2( 511.625, 291.25 )
scale = Vector2( 0.799023, 0.83125 )
z_index = -1
texture = ExtResource( 2 )

[connection signal="pressed" from="Container/MarginContainer/VBoxContainer/Start/PanelContainer/Button" to="." method="_on_Button_pressed" binds= [ "start" ]]
[connection signal="pressed" from="Container/MarginContainer/VBoxContainer/Controls/PanelContainer/Button" to="." method="_on_Button_pressed" binds= [ "controls" ]]
[connection signal="pressed" from="Container/MarginContainer/VBoxContainer/Credits/PanelContainer/Button" to="." method="_on_Button_pressed" binds= [ "credits" ]]
[connection signal="pressed" from="Container/MarginContainer/VBoxContainer/Close/PanelContainer/Button" to="." method="_on_Button_pressed" binds= [ "close" ]]
[connection signal="pressed" from="Container/Popup/MarginContainer/Close" to="." method="_on_Popup_Close_pressed"]

[editable path="Container/MarginContainer/VBoxContainer/Start"]
[editable path="Container/MarginContainer/VBoxContainer/Controls"]
[editable path="Container/MarginContainer/VBoxContainer/Credits"]
[editable path="Container/MarginContainer/VBoxContainer/Close"]
